Add space backgound

--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <title>PenguinWar</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="assets/css/space-backgound.css">
+
     <script src="assets/js/zombies.js"></script>
     <script>
         ZOMBIES.init();
     </script>
 </head>
 <body>
+
+<div id="game">
+
+    <span id="fog">A long</span>
+    <span id="fog-2">long time</span>
+    <span id="glow">ago,</span>
+    <span id="light">in a</span>
+    <span id="stars">galaxy</span>
+    <span id="stars-2">far</span>
+    <span id="small-stars">far</span>
+    <span id="small-stars-2">away&hellip;</span>
+
+</div>
 
 </body>
 </html>
