Improve Zombies Obj

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/space-backgound.css">
 
     <script src="assets/js/zombies.js"></script>
@@ -18,6 +19,8 @@
 
 <div id="game">
 
+    <img id="hero" class="hero-is-flying" src="assets/images/heros/male-hero.png">
+
     <span id="fog">A long</span>
     <span id="fog-2">long time</span>
     <span id="glow">ago,</span>
@@ -26,6 +29,9 @@
     <span id="stars-2">far</span>
     <span id="small-stars">far</span>
     <span id="small-stars-2">away&hellip;</span>
+
+
+
 
 </div>
 
