--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/space-backgound.css">
 
-    <script src="assets/js/zombies.js"></script>
-    <script>
-        ZOMBIES.init();
-    </script>
 </head>
 <body>
 
 <div id="game">
 
-    <img id="hero" class="hero-is-flying" src="assets/images/heros/male-hero.png">
+    <img id="hero" src="assets/images/heros/male-hero.png">
 
     <span id="fog">A long</span>
     <span id="fog-2">long time</span>
@@ -30,10 +26,13 @@
     <span id="small-stars">far</span>
     <span id="small-stars-2">away&hellip;</span>
 
-
-
-
 </div>
+
+<script src="assets/js/hero.js"></script>
+<script src="assets/js/zombies.js"></script>
+<script>
+    ZOMBIES.init();
+</script>
 
 </body>
 </html>
