hero class added

--- a/assets/js/index.html
+++ b/assets/js/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script type="text/javascript" src="components.js">
-
     </script>
+    <script type="text/javascript" src="hero.js"></script>
   </body>
 </html>
