--- a/menu.html
+++ b/menu.html
@@ -9,10 +9,10 @@
 
 <div id="menu">
     <ul>
-        <li><a href="#">New Game</a></li>
-        <li><a href="#">High Scores</a></li>
-        <li><a href="#">How To Play</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#" class="round green">New Game<span class="round">Become a Hero for Open Source Technologies!!</span></a></li>
+        <li><a href="#" class="round red">High Scores<span class="round">See who are your Compatitors! </span></a></li>
+	      <li><a href="#" class="round yellow">How To Play<span class="round">Press New Game and start shooting non-open source Techs!</span></a></li>
+	      <li><a href="#" class="round yellow">About<span class="round">Stop wasting time, <br>Just Play!</span></a></li>
     </ul>
 </div>
 <script src="assets/js/menu.js"></script>
