add fire to penguin

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div id="game">
 
-    <img id="hero" src="assets/images/heros/male-hero.png">
+    <!-- <img id="hero" src="assets/images/heros/male-hero.png"> -->
 
     <span id="fog">A long</span>
     <span id="fog-2">long time</span>
@@ -27,7 +27,7 @@
     <span id="small-stars-2">away&hellip;</span>
 
 </div>
-
+<script src="assets/js/components.js"></script>
 <script src="assets/js/hero.js"></script>
 <script src="assets/js/zombies.js"></script>
 </body>
