--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/space-backgound.css">
-
+<!--     <link rel="stylesheet" href="assets/css/space-backgound.css">
+ -->
 </head>
 <body>
 
