Add background videos

--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <title>PenguinWar</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
 </head>
 <body >
 
