object laser ceated in dom

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </div>
 <script src="assets/js/components.js"></script>
 <script src="assets/js/hero.js"></script>
+<script src="assets/js/laser.js"></script>
 <script src="assets/js/zombies.js"></script>
 </body>
 </html>
