handel enemy move

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="assets/js/components.js"></script>
 <script src="assets/js/hero.js"></script>
 <script src="assets/js/laser.js"></script>
+<script src="assets/js/enemy.js"></script>
 <script src="assets/js/zombies.js"></script>
 </body>
 </html>
