--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
 <div id="game">
+    <h1 id="score" style="color: lemonchiffon"></h1>
     <div class="fullscreen-bg">
         <video loop muted autoplay class="fullscreen-bg__video">
             <source src="assets/videos/clouds.mp4" type="video/mp4">
