--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
 <div id="game">
     <h1 id="score" style="color: lemonchiffon"></h1>
+
+    <div id="terminal">
+        <p>
+            <span><strong>root@Zombies:~$</strong> Penguin is ready to go</span>
+        </p>
+    </div>
+
     <div class="fullscreen-bg">
         <video loop muted autoplay class="fullscreen-bg__video">
             <source src="assets/videos/clouds.mp4" type="video/mp4">
