--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <div id="game">
     <h1 id="score" style="color: lemonchiffon"></h1>
 
-    <div id="terminal">
-        <p>
-            <span><strong>root@Zombies:~$</strong> Penguin is ready to go</span>
-        </p>
+    <div class="terminal">
+        <div id="cmds">
+            <p><strong>root@Zombies:~$</strong> Penguin is ready to go</p>
+        </div>
     </div>
 
     <div class="fullscreen-bg">
