Add Exirs & Weapon Changing option

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </div>
 
 <script src="assets/js/components.js"></script>
+<script src="assets/js/exir.js"></script>
 <script src="assets/js/hero.js"></script>
 <script src="assets/js/laser.js"></script>
 <script src="assets/js/enemy.js"></script>
