--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="terminal">
         <div id="cmds">
-            <p><strong>root@Zombies:~$</strong> Penguin is ready to go</p>
+            <p><strong>root@Zombies:~$</strong> Penguin is ready to kill</p>
         </div>
     </div>
 
