Add Weapons list & Python Weapon

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 <div id="game">
     <h1 id="score" style="color: lemonchiffon"></h1>
 
+    <div id="weapons_list">
+        <ul></ul>
+    </div>
+
     <div class="terminal">
         <div id="cmds">
-            <p><strong>root@Zombies:~$</strong> Penguin is ready to kill</p>
+            <p><strong>root@Zombies:~$</strong> Open Source is ready to kill</p>
         </div>
     </div>
 
