--- a/menu.html
+++ b/menu.html
@@ -7,35 +7,49 @@
 </head>
 <body >
 
-<div id="menu">
-    <ul>
-        <li><a href="#" class="round green">New Game<span class="round">Become a Hero for Open Source Technologies!!</span></a></li>
-        <li><a href="#" class="round red">High Scores<span class="round">See who are your Compatitors! </span></a></li>
-	      <li><a href="#" class="round yellow">How To Play<span class="round">Press New Game and start shooting non-open source Techs!</span></a></li>
-	      <li><a href="#" class="round yellow">About<span class="round">Stop wasting time, <br>Just Play!</span></a></li>
-    </ul>
-</div>
-<div class="new-game">
-  <form id="form" action="index.html" method="post">
-    <label for="name">Please Enter your name:</label>
-    <input type="text" name="name" value="" id="username" />
-    <br>
-    <label for="character">Select Your Character </label>
-    <br>
-    <div class="characters">
-      <img src="assets/images/heros/penguin.png" alt="">
-      <input type="radio" name="character" value="male"> Penguin
-    </div>
-    <div class="characters">
-      <img src="assets/images/heros/penguinna.png" alt="">
-      <input type="radio" name="character" value="female"> Penguinna
-    </div>
-    <br>
-      <input id="go" type="submit" value="Go!" name="submit" >
-      <div style="clear:both"></div>
-  </form>
-  <div id="errors" style="width:200px;height:100px">
-    <ul></ul>
+<div id="menu-div">
+  <div id="menu">
+      <ul>
+          <li id="new-game-button"><a href="#" class="round green">New Game<span class="round">Become a Hero for Open Source Technologies!!</span></a></li>
+          <li id="high-scores-button"><a href="#" class="round red">High Scores<span class="round">See who are your Compatitors! </span></a></li>
+  	      <li><a href="#" class="round yellow">How To Play<span class="round">Press New Game and start shooting non-open source Techs!</span></a></li>
+  	      <li><a href="#" class="round yellow">About<span class="round">Stop wasting time, <br>Just Play!</span></a></li>
+      </ul>
+  </div>
+  <div id="new-game">
+    <form id="form" action="index.html" method="post">
+      <label for="name">Please Enter your name:</label>
+      <input type="text" name="name" value="" id="username" />
+      <br>
+      <label for="character">Select Your Character </label>
+      <br>
+      <div class="characters">
+        <img src="assets/images/heros/penguin.png" alt="">
+        <input type="radio" name="character" value="male"> Penguin
+      </div>
+      <div class="characters">
+        <img src="assets/images/heros/penguinna.png" alt="">
+        <input type="radio" name="character" value="female"> Penguinna
+      </div>
+      <br>
+        <input id="go" type="submit" value="Go!" name="submit" >
+        <div style="clear:both"></div>
+        <div id="errors">
+          <ul></ul>
+        </div>
+    </form>
+  </div>
+  <div id="high-scores">
+    <table style="width:100%">
+      <tr>
+        <th>Name</th>
+        <th>Score</th>
+      </tr>
+      <tr>
+        <td>Jill</td>
+        <td>Smith</td>
+      </tr>
+    </table>
   </div>
 </div>
 
@@ -46,7 +60,33 @@
   var errors = document.getElementById('errors').getElementsByTagName('ul')[0] ;
   var charactersInput = document.getElementsByName('character');
   var form = document.getElementsByTagName('form')[0] ;
+  var newgameDiv = document.getElementById('new-game');
+  var newgameButton = document.getElementById('new-game-button') ;
+  var highscoresDiv = document.getElementById('high-scores');
+  var highscoresButton = document.getElementById('high-scores-button') ;
 
+
+  // setting animation for the new game menu
+  newgameButton.addEventListener('click',function(e){
+    if(highscoresDiv.style.visibility == "visible"){
+      highscoresDiv.style.visibility = "hidden" ;
+      highscoresDiv.style.left = "-50%";
+    }
+    newgameDiv.style.visibility = "visible" ;
+    newgameDiv.style.left = "25%" ;
+  });
+
+  //
+  highscoresButton.addEventListener('click',function(e){
+    if(newgameDiv.style.visibility == "visible"){
+      newgameDiv.style.visibility = "hidden" ;
+      newgameDiv.style.left = "-50%";
+    }
+    highscoresDiv.style.visibility = "visible" ;
+    highscoresDiv.style.left = "25%" ;
+  });
+
+  // event listeners for characters in the new game menu
   for( i = 0 ; i < characters.length ; i++ ){
     characters[i].addEventListener('click',function(e){
       for( j = 0 ; j < characters.length ; j++  ){
