refined restart function, fixed bugs in gameover function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div id="pause">
     <div class="pausetext animated tada">
-        <h1>Why did you stop killing?</h1>
+        <h1>Why did you stop Fighting ?!!</h1>
         <h1>Press Esc To Resume</h1>
     </div>
 </div>
