--- a/index.html
+++ b/index.html
@@ -46,14 +46,10 @@
       </form>
     </div>
     <div id="high-scores">
-      <table style="width:100%">
+      <table id ="high-scores-table" style="width:100%">
         <tr>
           <th>Name</th>
           <th>Score</th>
-        </tr>
-        <tr>
-          <td>Jill</td>
-          <td>Smith</td>
         </tr>
       </table>
     </div>
@@ -62,14 +58,6 @@
     <div class="pausetext animated tada">
         <h1>Why did you stop Fighting ?!!</h1>
         <h1>Press Esc To Resume</h1>
-        <div class="menu">
-            <ul>
-                <li class="new-game-button"><a href="#" class="round green">New Game<span class="round">Become a Hero for Open Source Technologies!!</span></a></li>
-                <li class="high-scores-button"><a href="#" class="round red">High Scores<span class="round">See who are your Compatitors! </span></a></li>
-                <li><a href="#" class="round yellow">How To Play<span class="round">Press New Game and start shooting non-open source Techs!</span></a></li>
-                <li><a href="#" class="round yellow">About<span class="round">Stop wasting time, <br>Just Play!</span></a></li>
-            </ul>
-        </div>
     </div>
 </div>
 <div id="levelinfo"></div>
