--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="fullscreen-bg">
-        <video loop muted autoplay class="fullscreen-bg__video">
+        <video id="background-video" loop muted autoplay class="fullscreen-bg__video">
             <source src="assets/videos/clouds.mp4" type="video/mp4">
         </video>
     </div>
