--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <br>
         <div class="characters">
           <img src="assets/images/heros/penguin.png" alt="">
-          <input type="radio" name="character" value="male"> Penguin
+          <input type="radio" name="character" value="penguin"> Penguin
         </div>
         <div class="characters">
           <img src="assets/images/heros/penguinna.png" alt="">
-          <input type="radio" name="character" value="female"> Penguinna
+          <input type="radio" name="character" value="penguinna"> Penguinna
         </div>
         <br>
           <input id="go" type="submit" value="Go!" name="submit" >
