player name div added to game

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 </div>
 <div id="levelinfo"></div>
 <div id="game">
+    <div id="player-name"></div>
     <div id="score">0</div>
     <div id="hearts"></div>
     <div id="weapons_list">
