--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
         </video>
     </div>
 </div>
+<div id="sounds">
+
+</div>
 
 <script src="assets/js/components.js"></script>
 <script src="assets/js/exir.js"></script>
