Add Exirs & HERORS

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br>
         <div class="characters">
           <img src="assets/images/heros/penguin.png" alt="">
-          <input type="radio" name="character" value="penguin"> Penguin
+          <input checked type="radio" name="character" value="penguin"> Penguin
         </div>
         <div class="characters">
           <img src="assets/images/heros/penguinna.png" alt="">
