added sounds files

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br>
         <div class="characters">
           <img src="assets/images/heros/penguin.png" alt="">
-          <input checked type="radio" name="character" value="penguin"> Penguin
+          <input type="radio" name="character" value="penguin"> Penguin
         </div>
         <div class="characters">
           <img src="assets/images/heros/penguinna.png" alt="">
@@ -80,7 +80,7 @@
     </div>
 </div>
 <div id="sounds">
-
+  
 </div>
 
 <script src="assets/js/components.js"></script>
