handel game over

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         <h1>Press Esc To Resume</h1>
     </div>
 </div>
+
+<div id="gameover">
+    <div class="gameovertext animated tada">
+        <h1>game over </h1>
+    </div>
+</div>
+
 <div id="levelinfo"></div>
 <div id="game">
     <div id="player-name"></div>
