setup control to all audio objects

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <div id="levelinfo"></div>
 <div id="game">
     <div id="player-name"></div>
+    <div id="sound-setting"><a id="soundCtrl" href="#" alt="Mute"><img id="imgSoundCtrl" src="assets/images/sound/speaker.png" alt="Mute"></a></div>
     <div id="score">0</div>
     <div id="hearts"></div>
     <div id="weapons_list">
